--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
@@ -63,7 +63,7 @@
       <div style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end">Hi my name is genie</div>
       <div style="color:#605E5C; position: absolute; left:25px; right: 32px; top:35px; height: 19px; font-family: 'segoe UI'; font-size: 10px; line-height: 14px; display: block">Help bot</div>
       <div style="position: absolute; top:10px; right: 10px; display: flex; align-items: flex-end; cursor: pointer;">
-        <i class="ms-Icon ms-Icon--Cancel" (click)="closePanel()" aria-hidden="true"></i>
+        <i id="close" class="ms-Icon ms-Icon--Cancel" (click)="closePanel()" aria-hidden="true"></i>
         <!-- <fab-icon iconName="Cancel" style="float:right" (onClick)="closePanel()"></fab-icon> -->
       </div>
       <!-- <button style="position: absolute; right: 10px; display: flex; align-items: flex-end" (click)="isOpen=false">X</button> -->
@@ -97,7 +97,7 @@
       <div class="chat-search-box" style="position: absolute; bottom: 19px; left: 37px; right: 37px">
         <!-- <fab-text-field [placeholder]="'Type your question'" [iconProps]="{iconName: 'send'}"></fab-text-field> -->
         <!-- [iconProps]="{iconName: 'send'}" -->
-        <fab-search-box [placeholder]="'Type your question'" (onSearch)="onSearchEnter($event)" [iconProps]="{iconName: 'none'}" contentStyle="height:31px;border-radius:15px" ></fab-search-box>
+        <fab-search-box [placeholder]="'Type your question'" (onSearch)="onSearchEnter($event)" [iconProps]="{iconName: 'send'}" contentStyle="height:31px;border-radius:15px" ></fab-search-box>
         </div>
     </div>
     <!-- <span>Chat</span> -->
