--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -7,7 +7,7 @@
       <i class="fa fa-exclamation icon-err" [style.display]="searchTerm?.trim().length>0 && searchTerm?.trim().length<2? '': 'none'" title="At least 2 characters"></i>
     </div>
 </div>
-<detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName"></detector-list-analysis>
+<detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName" [analysisId]="analysisId" [searchTerm]="searchTerm"></detector-list-analysis>
 
 <div [hidden]="detectorId === ''">
   <div>
