Move support topic id config from cxp-chat-service to the intended resource service.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -8,7 +8,7 @@
           A Microsoft Support engineer will engage with you to help answer your questions.<br>
       </div>
       <div class = "cxpChat-actionBtnContainer">
-          <input class="custom-button inactive-button white-border" (click)="hideChatBubble()"  type="button" value="Maybe later" />
+          <input class="custom-button inactive-button white-border" (click)="hideChatBubble(true)"  type="button" value="Maybe later" />
           <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button" value="Confirm & Start!" />
       </div>
     </div>
