Move the chat button to the left

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -19,6 +19,6 @@
   </div>
 
   <div class = "cxpChat-cellContainer">
-      <button type="button" (click)="toggleChatBubble()" class="custom-button confirm"><i class='fa fa-comments'></i> Chat Now!</button>
+      <button type="button" (click)="toggleChatBubble()" class="custom-button confirm remove-left-margin"><i class='fa fa-comments'></i> Chat Now!</button>
   </div>
 </div>
