--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,15 +1,26 @@
 <div class="main-area">
-  <div class="home-content">
-      <h2 tabindex="0" class="home-title">{{homePageText.title}}</h2>
-      <p  tabindex="0" class="home-description">{{homePageText.description}}</p>
-      <p class="home-description">If you would like to look at the health check then <a>click here.</a>You can also ask chatbot <a>Genie</a> any questions you may have</p>
-  </div>
-  <div class="home-container">
-    <div style="margin:25px 0px;" (keyup.escape)="clearSearch()" role="search">
-      <div class="search-box">
-      <fab-search-box tabindex="0" type="search" placeholder="Search" [value]="searchValue"
-        (onChange)="updateSearchValue($event)" (onFocus)="onSearchBoxFocus($event)" (onBlur)="clearSearch()"
-        aria-controls="search-results"></fab-search-box>
+    <div class="home-content">
+        <h2 tabindex="0" class="home-title">{{homePageText.title}}</h2>
+        <p  tabindex="0" class="home-description">{{homePageText.description}}</p>
+        <p class="home-description">If you would like to look at the health check then <a>click here.</a>You can also ask chatbot <a>Genie</a> any questions you may have</p>
+    </div>
+    <div class="home-container">
+      <div style="margin:25px 0px;" (keyup.escape)="clearSearch()" role="search">
+        <div class="search-box">
+        <fab-search-box tabindex="0" type="search" placeholder="Search" [value]="searchValue"
+          (onChange)="updateSearchValue($event)" (onFocus)="onSearchBoxFocus($event)" (onBlur)="clearSearch()" iconProps="iconProps"
+          aria-controls="search-results"></fab-search-box>
+        </div>
+        <div role="status">
+          <p style="margin-top: 7px;" *ngIf="inputAriaLabel">{{inputAriaLabel}}</p>
+        </div>
+        <div id="search-results" role="region" aria-live="polite">
+          <ng-container *ngIf="searchBoxFocus">
+            <search-results [searchValue]="searchValue" (resultCount)="onResultCount($event)"
+              (keyup.escape)="clearSearch()">
+            </search-results>
+          </ng-container>
+        </div>
       </div>
       <div role="status">
         <p style="margin-top: 7px;" *ngIf="inputAriaLabel">{{inputAriaLabel}}</p>
