--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
@@ -1,22 +1,3 @@
-<!-- <p>
-  This is the overview page of category: <br />
-  <b> {{categoryId}}</b>
-</p> -->
-<!-- <div style="margin: 0px -10px;">
-  <support-bot startingKey="welcome-WindowsAvailabilityAndPerformance"></support-bot>
-</div> -->
-<template #tpl>
-  <span>I am span in template</span>
-</template>
-
-<ng-template #panelTitle>
-  <h1>Hi my name is genie</h1>
-</ng-template>
-
-<ng-template #headerTemplate let-column="column" let-sort="sortFn">
-  <div (click)="sort()">{{ column.name }}</div>
-  <input type="text" placeholder="{{column.name}}" (keyup)="updateFilter($event, column.prop)" />
-</ng-template>
 <div class="category-container">
   <fab-command-bar style="margin-left: -30px; margin-top: -25px">
     <items>
@@ -133,10 +114,8 @@
     </fab-calendar>
 
   <div>
-    <p class="category-title" style="font-size: 18px;line-height: 22px;font-weight: 600;font-family: 'Segoe UI';">Availability and performance</p>
-    <p class="category-description">Explore this overview to discover any application or platform issues that may affect
-      your app's high availability. You
-      can also drill down on an area by selecting a topic in the side navigation</p>
+    <h3 class="category-title">{{category.name}}</h3>
+    <p class="category-description">{{category.description}}</p>
   </div>
 
   <!-- <div style="margin: 15px 0px" (click)="isOpen=!isOpen">
@@ -146,35 +125,12 @@
   </div> -->
 
 
-  <div class="search-box">
+  <div class="search-box" style="margin-bottom: 25px;">
     <fab-search-box placeholder="Search"></fab-search-box>
   </div>
 
-  <!-- [renderNavigationContent]="navigationContent"  -->
-  <!-- [headerText]="'Hi my name is Genie'" -->
-  <!-- [renderFooter]="renderFooter" -->
-  <!-- [renderNavigationContent]="navigationContent"  -->
-  <!-- (onDismiss)="isOpen=!isOpen" -->
-  <!-- width: 585px -->
-  <!-- " [styles]="panelStyles"" -->
   <fab-panel [isOpen]="isOpen" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true" [isLightDismiss]="true"
     [hasCloseButton]="false" [closeButtonAriaLabel]="'close'">
-
-    <!-- closeButton.style.position='absolute';
-    closeButton.style.right = '10px';
-    panelTitle.style.position = 'absolute';
-    panelTitle.style.left = '25px';
-    panelTitle.style.right = '32px';
-    panelTitle.style.top = '0px';
-    panelTitle.style.height = '27px';
-    panelTitle.style.fontFamily = "Segoe UI";
-    panelTitle.style.fontSize = "18px";
-    panelTitle.style.lineHeight = "24px";
-    panelTitle.style.display = "flex";
-    panelTitle.style.alignItems = "flex-end";
-    panelTitle.innerHTML = "Hi my name is Genie" -->
-
-    <!-- style="position: absolute;" -->
     <div style="margin-bottom: 10px">
       <div
         style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end">
@@ -226,5 +182,8 @@
   <p style="font-size: 12px;">Are you looking for something else?</p>
   <div class="search-box">
     <fab-search-box placeholder="Search"></fab-search-box>
+  <div style="margin-left: -20px;">
+    <detector-container [detector]="categoryId" [hideDetectorControl]="true"></detector-container>
+  </div>
   </div>
 </div>
