--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -5,8 +5,10 @@
 }
 
 .category-title{
-    font-size: 22px;
+    font-size: 18px;
     line-height: 22px;
+    font-weight: 600;
+    font-family: 'Segoe UI';
 }
 
 .category-description {
