resolve conflicts after cherry pick

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
@@ -178,7 +178,7 @@
     </div>
     <!-- <span>Chat</span> -->
   </fab-panel>
-  <health-check-v3></health-check-v3>
+  <!-- <health-check-v3></health-check-v3> -->
   <p style="font-size: 12px;">Are you looking for something else?</p>
   <div class="search-box">
     <fab-search-box placeholder="Search"></fab-search-box>
