--- a/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/global.scss
@@ -160,10 +160,10 @@ body{
     font-size: 13px !important;
 }
 
-.row {
-    margin-left:-5px;
-    margin-right:-5px;
-}
+// .row {
+//     margin-left:-5px;
+//     margin-right:-5px;
+// }
 
 .inline {
     display: inline;
