Resolve build error

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
@@ -28,7 +28,7 @@
 
       section.content {
         position: fixed;
-     //   width:85%;
+        width:calc(100% - 265px);
         // top: 43px;
         top: 0px;
         bottom: 0px;
