--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -1,7 +1,9 @@
 @import "../../../../styles/main.scss";
 
 .category-container{
-    margin: 25px 30px;
+    margin: 25px 30px 25px 0px;
+    width:100%;
+    padding-left:30px;
 }
 
 .category-title{
