--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
@@ -1,5 +1,5 @@
 <!-- *ngIf="!loading else loadingMessage" -->
-<div class="detector-summary-container" [class.with-full-report]="showTopLevelFullReport" >
+<div class="detector-summary-container" [class.with-full-report]="false" >
     <!-- <detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName"></detector-list-analysis> -->
     <generic-analysis [analysisId]="'searchResultsAnalysis'" [searchTerm]="keyword" [searchMode]="searchMode" (onComplete)="updateStatus($event)"></generic-analysis>
     <!-- <div class="full-report" *ngIf="showTopLevelFullReport">
